add fixed data table

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,2 +1,11 @@
 // fretboard
 
+body {
+  margin-top:0 !important;
+}
+
+#page_wrapper {
+  max-width:1000000 !important;
+  min-width:auto !important;
+}
+
