--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,3 +9,12 @@ body {
   min-width:auto !important;
 }
 
+.ui-widget {
+  font-size:inherit !important;
+}
+
+#header table:nth-child(0) {
+  width:95%;
+
+}
+
