patient header control.  enhanced fixed data table work.

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -3,8 +3,10 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="http://www.cbioportal.org/js/lib/jquery.min.js?20160811-1729"></script>
 </head>
 <body>
+<div id="clinical_div"></div>
     <div id="root"></div>
 </body>
 </html>
