Add patientHeader component
This will allow changing the header of the patient view.

Signed-off-by: Ino de Bruijn <ino@ino.pm>

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -5,6 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
+    <div id="clinical_div"></div>
     <div id="root"></div>
 </body>
 </html>
