implement the samples table with enhanced fixed data table

--- a/src/features/patientView/clinicalInformation/style/local-styles.scss
+++ b/src/features/patientView/clinicalInformation/style/local-styles.scss
@@ -1,8 +1,9 @@
-.tab-content {
-  padding-top:30px;
-}
-
 .fixedTable {
   height:500px;
   margin-bottom:30px;
+}
+
+#content h4 {
+  margin-bottom:15px !important;
+  margin-top:20px;
 }
