--- a/my-index.ejs
+++ b/my-index.ejs
@@ -3,11 +3,10 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
 </head>
 <body>
     <div id="clinical_div"></div>
-    <div id="root"></div>
+    <div id="reactRoot"></div>
 </body>
 </html>
