--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -79,3 +79,19 @@
 //
 //
 //}
+
+header {
+  padding:20px;
+  background:#333;
+
+
+  h1 {
+    color:#fff;
+    padding:0;
+    margin:0;
+    font-size:3rem;
+  }
+
+
+
+}
