Add global scss variables file for use in local scss files

--- a/sass-resources.scss
+++ b/sass-resources.scss
@@ -1,2 +1,3 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_variables";
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap/_mixins";
+@import "./src/styles/variables.scss";
