Don'g show pageheader when we're not in onePageApp context

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -5,9 +5,9 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script>window.defaultRoute = "/patient";</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-
 </head>
-<body>
+<body class="cbioOnePageApp">
+    <span id="reactHeader"></span>
     <div id="clinical_div"></div>
     <div id="reactRoot"></div>
 </body>
