adding tab structure to oncoprint page.

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <script>window.defaultRoute = "/patient";</script>
+    <script>window.defaultRoute = "/queryResult";</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body class="cbioOnePageApp">
