--- a/my-index.ejs
+++ b/my-index.ejs
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script>
-        window.defaultRoute = "/patient";
+        window.defaultRoute = "/queryResult";
         // Set default API in case none is specified in .env
         __API_ROOT__ = 'www.cbioportal.org/api-legacy';
     </script>
