Use clinical and samples API from cbioportal-rc
Use clinical-data and samples endpoint from http://cbioportal-rc.herokuapp.com
instead of using old API wrapper. The JS client is automatically generated by
swagger-client.

Further

- rename clinical_div to clinical_div_prototype. We still have to fix some
  issues related to the tooltip before we can replace that in main cbioportal
  project.
- Add API_ROOT to .env file on Travis
- Use cbioportal-rc for mockData fetching. Should also use API_ROOT at some
  point
- Revert to using bootstrap table, since styling looks a better until we find a
  suitable table

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -14,7 +14,7 @@
 </head>
 <body class="cbioOnePageApp">
     <span id="reactHeader"></span>
-    <div id="clinical_div"></div>
+    <div id="clinical_div_prototype"></div>
     <div id="reactRoot"></div>
 </body>
 </html>
