--- a/my-index.ejs
+++ b/my-index.ejs
@@ -8,6 +8,8 @@
         // Set default API in case none is specified in .env
         __API_ROOT__ = 'www.cbioportal.org/api-legacy';
     </script>
+    <script src="reactapp/js/common.bundle.js"></script>
+    <link href="reactapp/css/bootstrap.min.css" rel="stylesheet"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 </head>
 <body class="cbioOnePageApp">
