--- a/my-index.ejs
+++ b/my-index.ejs
@@ -6,7 +6,7 @@
     <script>
         window.defaultRoute = "/patient";
         // Set default API in case none is specified in .env
-        __API_ROOT__ = 'http://cbioportal-rc.herokuapp.com/api';
+        __API_ROOT__ = 'cbioportal-rc.herokuapp.com/api';
     </script>
     <script src="reactapp/js/common.bundle.js"></script>
     <link href="reactapp/css/bootstrap.min.css" rel="stylesheet"></link>
