--- a/my-index.ejs
+++ b/my-index.ejs
@@ -4,8 +4,9 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script>
-        //window.devContext = true;
+        window.devContext = true;
         window.defaultRoute = "/patient";
+
         // Set default API in case none is specified in .env
         __API_ROOT__ = 'cbioportal-rc.herokuapp.com/api';
     </script>
