added container component for patient view mutations content
Former-commit-id: de3bae89fa61eca7fa4152d215b2ad0650211edd

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -16,6 +16,7 @@
 </head>
 <body class="cbioOnePageApp">
     <span id="reactHeader"></span>
+    <div id="mutations_div_prototype"></div>
     <div id="clinical_div_prototype"></div>
     <div id="reactRoot"></div>
 </body>
