Cancer study selector

--- a/my-index.ejs
+++ b/my-index.ejs
@@ -5,7 +5,7 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script>
         window.devContext = true;
-        window.defaultRoute = "/patient";
+        window.defaultRoute = "/home";
 
         // Set default API in case none is specified in .env
         __API_ROOT__ = 'cbioportal-rc.herokuapp.com/api';
