hotfix for broken build: add render-if to package.json hotfix for header styles on patient view page
Former-commit-id: e8b7409974b7c0bce7f9303b4c9528da032baea6

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -1,4 +1,16 @@
 
+/* fix for legacy style isses. makes it bootstrap */
+#content .cbioportal-frontend {
+    h4 {
+     font-size:18px;
+     margin-top:10px;
+     margin-bottom:10px;
+      font-weight:500;
+      line-height:1.1;
+      color:$text-color;
+  }
+}
+
 th.reactable-header-sortable {
 
   &:focus {outline:0;}
