--- a/src/shared/components/StudyList/styles.module.scss
+++ b/src/shared/components/StudyList/styles.module.scss
@@ -12,8 +12,11 @@ ul.StudyList {
 
   &.Level0 {
     padding: 5px;
-  }
 
+    > li.CancerType, > li.Study {
+      margin-left: 0px;
+    }
+  }
 
   li.CancerType {
     list-style-type: none;
