add tabs around components
Former-commit-id: ec3091093ae503df47ad0737a1fb80a020bfe167

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -46,3 +46,7 @@ th.reactable-header-sort-asc:after {
 .rc-tooltip {
   opacity:1 !important;
 }
+
+.mainTabs > .tab-content {
+  padding-top:20px;
+}
