--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -29,7 +29,7 @@ th.reactable-header-sort-asc:after {
   padding-bottom: 5px;
 }
 
-.reactable-column-header {
+.table-border-top .reactable-column-header {
 
   th {
     border-top:1px dashed #ddd !important;
