--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -40,3 +40,28 @@ th.reactable-header-sort-asc:after {
 #content {
   margin-top:8px;
 }
+
+
+.Select-control {
+  background: rgb(17, 116, 167) !important;
+  border: 1px solid rgba(0,0,0,0.05) !important;
+  border-radius: 2px !important;
+  color: rgba(0,0,0,0.35) !important;
+  height: 28px !important;
+
+  .Select-input {
+    height: 28px;
+  }
+}
+
+.Select-placeholder {
+  color: #fff !important;
+}
+
+.Select-placeholder, .Select--single > .Select-control .Select-value {
+  line-height: 28px !important;
+}
+
+.Select-arrow {
+  border-color: #fff transparent transparent;
+}
