--- a/src/shared/components/labeledCheckbox/styles.module.scss
+++ b/src/shared/components/labeledCheckbox/styles.module.scss
@@ -2,15 +2,14 @@ label.labeledCheckbox {
   cursor: pointer;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   margin: 0px;
   min-height: 1.2em;
   font-weight: normal;
 
   > input[type="checkbox"] {
     cursor: pointer;
-    margin: 0px;
-    margin-right: 4px;
+    margin: 3px 6px 0 0;
     min-width: 1em;
   }
 }
