--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -34,7 +34,7 @@
     text-align: right;
     text-transform: uppercase;
     color: #fff;
-    font: normal normal 500 11px/19px 'Helvetica Neue';
+    font: normal normal 500 11px/19px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     padding: 5px 10px;
 
     &:hover {
@@ -43,7 +43,7 @@
   }
 
   h2 {
-    font: normal normal 300 20px/30px 'Helvetica Neue';
+    font: normal normal 300 20px/30px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     flex-grow: 2;
     margin: 0px;
   }
@@ -59,7 +59,7 @@
     background-color: #1982b8;
     border-bottom: 1px solid rgb(17, 116, 167);
     color: #fff;
-    font: normal normal 500 13px/18px 'Helvetica Neue';
+    font: normal normal 500 13px/18px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     margin: 0;
     padding: 10px 15px;
@@ -106,7 +106,7 @@
         &.cancerTypeListItemCount {
           background-color: rgb(222, 233, 241);
           border-radius: 2px;
-          font: normal normal 400 10px/19px 'Helvetica Neue';
+          font: normal normal 400 10px/19px 'Helvetica Neue', Helvetica, Arial, sans-serif;
           text-align: center;
           width: 25px;
         }
