fix indent and behavior of radio buttons, add css classes

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -89,3 +89,21 @@
   }
 }
 
+.GeneticProfileSelector {
+  div.singleCheckbox, div.groupCheckbox {
+    label {
+      display: inline;
+    }
+  }
+  div.radioGroup {
+    margin-left: 20px;
+
+    div.radioItem {
+    }
+  }
+  div.zScore {
+    margin-left: 40px;
+  }
+  label.profileName {
+  }
+}
