--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -42,26 +42,31 @@ th.reactable-header-sort-asc:after {
 }
 
 
-.Select-control {
-  background: rgb(17, 116, 167) !important;
-  border: 1px solid rgba(0,0,0,0.05) !important;
+.Select-control, .Select-control:hover {
+  background: rgba(0, 0, 0, 0.1) !important;
+  border: 0px !important;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1) !important;
   border-radius: 2px !important;
-  color: rgba(0,0,0,0.35) !important;
-  height: 28px !important;
+  color: rgba(255, 255, 255, 0.85) !important;
+  height: 30px !important;
+  font-weight: 300;
 
   .Select-input {
-    height: 28px;
+    height: 30px;
+    font-weight: 300;
   }
 }
 
-.Select-placeholder {
-  color: #fff !important;
+.Select-placeholder, .Select-clear-zone,
+.has-value.Select--single > .Select-control .Select-value .Select-value-label, .has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
+  color: rgba(255, 255, 255, 0.85) !important;
+  font-weight: 300;
 }
 
 .Select-placeholder, .Select--single > .Select-control .Select-value {
-  line-height: 28px !important;
+  line-height: 30px !important;
 }
 
 .Select-arrow {
-  border-color: #fff transparent transparent;
+  border-color: rgba(255, 255, 255, 0.85) transparent transparent !important;
 }
