--- a/src/shared/components/StudyList/styles.module.scss
+++ b/src/shared/components/StudyList/styles.module.scss
@@ -14,6 +14,7 @@ ul.StudyList {
 
   &.Level0 {
     padding: 5px;
+    margin-top: -20px;
 
     > li.CancerType, > li.Study {
       margin-left: 0px;
@@ -49,8 +50,8 @@ ul.StudyList {
         font: normal normal 500 16px/18px 'Helvetica Neue', Helvetica, Arial, sans-serif;
         color: #333;
         border-bottom: 1px solid rgb(232, 241, 248);
-        padding: 10px 5px;
-        margin: 0px 10px;
+        padding: 10px 5px 5px 5px;
+        margin: 20px 10px 0px 10px;
       }
     }
 
@@ -104,7 +105,8 @@ ul.StudyList {
       font-size: 12px;
 
       .StudyLinks {
-        display: inline;
+        display: inline-block;
+        width: 40px;
 
         a {
           color: #1982b8;
