--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    max-width: 450px;
   }
   a {
     cursor: pointer;
@@ -32,17 +31,20 @@
     display: block;
     text-align: right;
     text-transform: uppercase;
-    color: #fff;
+    color: rgba(255, 255, 255, 0.90);
     font: normal normal 500 11px/19px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     padding: 5px 10px;
+    box-shadow: inset 1px 1px 0px rgba(255, 255, 255, 0.1);
 
     &:hover {
       cursor: pointer;
+      background: #1f688e;
+      color: #fff;
     }
   }
 
   h2 {
-    font: normal normal 300 20px/30px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font: normal normal 300 20px/23px 'Helvetica Neue', Helvetica, Arial, sans-serif;
     flex-grow: 2;
     margin: 0px;
   }
@@ -105,6 +107,7 @@
         &.cancerTypeListItemCount {
           background-color: rgb(222, 233, 241);
           border-radius: 2px;
+          box-shadow: 0px 1px 0px rgba(0,0,0,0.1);
           font: normal normal 400 10px/19px 'Helvetica Neue', Helvetica, Arial, sans-serif;
           text-align: center;
           width: 25px;
