--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -85,6 +85,8 @@
     padding: 0px;
     margin: 0px;
     width: 215px;
+    max-height: 400px;
+    overflow: auto;
 
     li {
       cursor: pointer;
