Hide genetic profile

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -149,6 +149,7 @@
 }
 
 .GeneticProfileSelector {
+  display: none !important;
   div.singleCheckbox, div.groupCheckbox {
     label {
       display: inline;
