improved Mutation Assessor column renderer
Former-commit-id: ca560cb461908728b3f79892acc74bd72c91cd01

--- a/src/shared/components/mutationTable/column/mutationAssessor.module.scss
+++ b/src/shared/components/mutationTable/column/mutationAssessor.module.scss
@@ -1,5 +1,5 @@
 .oma-link {
-  font-weight:bold;
+  font-weight:normal;
 }
 
 .oma-high {
@@ -20,6 +20,12 @@
 .oma-neutral {
   color: #909090;
   font-weight:bold;
+}
+
+.oma-na {
+  color: #808080;
+  font-size: xx-small;
+  text-align: center;
 }
 
 .mutation-assessor-link {
