--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -163,9 +163,9 @@
 }
 
 .GeneticProfileSelector {
-  border: 1px solid rgba(0,0,0,0.5);
-  border-radius: 5px;
-  padding: 5px;
+  border: 1px solid rgb(170, 170, 170);
+  border-radius: 10px;
+  padding: 10px;
 
   div.singleCheckbox, div.groupCheckbox {
     margin-left: 20px;
@@ -187,24 +187,24 @@
 }
 
 .DataTypePrioritySelector {
-  border: 1px solid rgba(0,0,0,0.5);
-  border-radius: 5px;
-  padding: 5px;
+  border: 1px solid rgb(170, 170, 170);
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .PatientCaseSetSelector {
-  border: 1px solid rgba(0,0,0,0.5);
-  border-radius: 5px;
-  padding: 5px;
+  border: 1px solid rgb(170, 170, 170);
+  border-radius: 10px;
+  padding: 10px;
 
   .ReactSelect {
   }
 }
 
 .GeneSetSelector {
-  border: 1px solid rgba(0,0,0,0.5);
-  border-radius: 5px;
-  padding: 5px;
+  border: 1px solid rgb(170, 170, 170);
+  border-radius: 10px;
+  padding: 10px;
 
   .ReactSelect {
   }
