cancer types w/ selected studies now appear bold

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -143,11 +143,15 @@
   }
 
   .matchingNodeText {
-    font-weight: bold;
+    font-style: italic;
   }
 
   .nonMatchingNodeText {
-    font-weight: normal;
+    font-style: normal;
+  }
+
+  .containsSelectedStudies {
+    font-weight: bold;
   }
 
   .searchTextInput {
