add funcitonality to SampleListSelector and GeneSetSelector

--- a/src/shared/components/query/styles.module.scss
+++ b/src/shared/components/query/styles.module.scss
@@ -196,7 +196,7 @@
   padding: 10px;
 }
 
-.PatientCaseSetSelector {
+.SampleListSelector {
   border: 1px solid rgb(170, 170, 170);
   border-radius: 10px;
   padding: 10px;
@@ -217,7 +217,5 @@
   }
 
   input.geneSet {
-    width: 775px;
-    height: 135px;
   }
 }
